themes/news/less/base.less
@import "_less.less";
/////////////////////////////////
// Google Fonts
@import url(//fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,700,400italic|Source+Serif+Pro:400,600,700);

/////////////////////////////////
// Bootstrap overrides
.container {
  padding: 0; // remove 15px padding on left and right so elements actually lay on the grid
}

/////////////////////////////////
// Elements

// normalize x-heights. Set correct x-height / cap height ratio for source sans and source serif, which allows for more graceful fallbacks on browsers that support it.
body, h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
  font-size-adjust: 0.475;
}

// Adjust margins to be more comfortable across headlines and sections
h2, .h2, h3, .h3 {
  margin-top: 1.25em;
  margin-bottom: .5em;
  section &, .well & {
    margin-top: .75em;
    &:first-child {
      margin-top: 0; // remove margins from first element in section
    }
  }
}

h4, .h4, h5, .h5, h6, .h6 {
  margin-top: 1.25em;
  margin-bottom:.25em;
  section &, .well & {
    margin-top: .75em;
    &:first-child {
      margin-top: 0; // remove margins from first element in section
    }
  }
}

h1, .h1 {
  .responsive-type(h1);
}

h2, .h2 {
  .responsive-type(h2);
}

h3, .h3 {
  .responsive-type(h3);
}

h4, .h4 {
  .responsive-type(h4);
}

h5, h6, .h5, .h6 {
  .responsive-type(base);
}

p, ul, ol {
  font-family: @font-family-serif;
  .responsive-type(base);
  margin-bottom: 1em;

  section &, .well & {
    &:last-child {
      margin-bottom: .5em; // adjust bottom margin when one of these elements is the last child of a well or section
    }
  }
}

li {
  margin-bottom: .5em;
  .navbar & {
    margin-bottom: 0; // remove margin bottom in navbar
  }
  .footer & {
    margin-bottom: .125em; // add a slight margin bottom on footer
  }
}

p {
  &.lead{
    margin-bottom: 1em;
    font-size: 1.4em;
    a {
      font-weight: 400;
    }
  }
}

h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {

  .fa {
    margin-right: 7px;
  }

  a {
    text-decoration: none;
    color: @su-red-text;
  }
}

a {
  font-weight: 600;
}

a, a:hover, a:active {
  outline: 0;
}

a:focus,
button:focus {
  .tab-focus();
}

.external-link {
  &:after {
    content: "\f08e" !important;
    font-family: FontAwesome !important;
    font-size: 0.6em !important;
    font-weight: 200 !important;
    margin-left: .6em !important;
    vertical-align: middle !important;
  }
}
.see-all-link {
  &:after {
    content: "\f138";
    font-family: FontAwesome;
    font-size: 0.7125em;
    margin-left: .4em;
    vertical-align: middle;
  }
}

div:focus { // for accessbility, some div's get focus - don't outline them
  outline: none;
}

dl {
  margin-top: 5px;
}

hr {
  border-color: @su-beige-40;
}

label {
  font-weight: 600;
}

input::-webkit-input-placeholder {
  color: rgba(0, 0, 0, .6) !important;
}

input::-moz-placeholder { /* Firefox 19+ */
  color: rgba(0, 0, 0, 1) !important;
}

input:-moz-placeholder { /* Firefox 18- */
  color: rgba(0, 0, 0, 1) !important;
}

input:-ms-input-placeholder {
  color: rgba(0, 0, 0, .6) !important;
}

/////////////////////////////////
// General classes, id's
.topics-buttons {
  a {
    color: @su-cool-gray;
    .btn-category {
      margin-bottom: 5px;
    }
  }
}

.abs-right,
.abs-left {
  .center-vertical(absolute);
}
.abs-left {
  left: 10px;
}
.abs-right {
  right: 10px;
}

.btn {
  line-height: 1;
  padding: 0; // put the padding on the <a> tag so the whole button is clickable
  font-size: @font-size-small;

  a { // format when a is nested within, e.g. <div class="btn">
    display: block;
    width: 100%;
    height: 100%;
    padding: 0.75em;
    font-weight: normal;
    text-transform: capitalize;
    text-decoration: none;

    &:hover, &:focus, &:active {
      text-decoration: none;
    }
  }
  a& { // format when .btn is directly on the <a> or the <input>, i.e. <a class="btn">
    padding: 0.5em 0.75em;
    font-weight: normal;
    text-decoration: none;
  }
  .modal &,
  input& {
    padding: 0.5em 0.75em;
  }
}
.btn-primary {
  .su-btn(@su-red);
}
.btn-one {
  .su-btn(@su-mint);
}

.btn-two {
  .su-btn(@su-lagunita);
}

.btn-three {
  .su-btn(@su-sage-gray);
  margin-bottom: 10px;
}

.btn-four {
  .su-btn(@su-red);
}

.btn-su-alert {
  .su-btn(@su-warm-gray);
}
.btn-light {
  .su-btn(transparent, @su-black, @su-cool-gray, @su-cool-gray, white);
}

.btn-category {
  .su-btn(#C0C0C0, @su-black, #C0C0C0, @su-cool-gray, white);
  margin-bottom: 5px;
  margin-right: 2px;
}

.btn-u {
  display: inline-block;
  position: relative;
  padding: 8px 13px;
  border: 0;
  cursor: pointer;
  background: @su-beige-40;
  color: @btn-txt;
  .font-size-em(15); // 15px expressed as em's
  text-decoration: none;
  text-shadow: none;

  &:hover {
    color: @su-beige-05;
    background: @su-warm-gray;
    text-decoration: none;
    .transition(all 0.4s ease-in-out);
  }

  i {
    .font-size-em(17; 15);
  }
}

.small-square {
  color: #5f574f;
  position: absolute;
  top: 0;
  margin: 0 0 0 -15px;
  content: '\25AA';
}

.color-red {
  color: @su-red-text;
}

.uppercase {
  text-transform: uppercase;
}

#hero-image img {
  .img-responsive;
}

.info-box {
  margin: 0 15px 30px;
  display: table;

  .icon-container,
  .text-container {
    display: table-cell;
    vertical-align: top;
    min-width: 65px;
  }

  .icon-container {
    text-align: center;
  }
  .text-container {
    padding-left: 15px;
  }

  .offset {
    padding-left: 65px;
  }

  h2 {
    .font-size-em(18);
    font-weight: normal;
    line-height: 1.2em;
    padding: 5px 0;
    text-transform: uppercase;
    color: @su-red-text;
  }

  ul {
    padding-left: 0;
    list-style: none;

    li {
      line-height: 1.1em;
      margin-bottom: 10px;
    }
  }

  dt {
    font-size: 1.1em;
  }

  dt, li {
    a {
      text-decoration: none;
      &:hover, &:active {
        text-decoration: underline;
      }
    }
  }
}

.margin-bottom-5 {
  .margin-bottom(5);
}

.margin-bottom-10 {
  .margin-bottom(10);
}

.margin-bottom-20 {
  .margin-bottom(20);
}

.margin-bottom-25 {
  .margin-bottom(25);
}

.margin-bottom-30 {
  .margin-bottom(30);
}

.margin-bottom-40 {
  .margin-bottom(40);
}

.margin-bottom-50 {
  .margin-bottom(50);
}

.margin-bottom-60 {
  .margin-bottom(60);
}

.navbar {
  border: none;
}

/*
.screen-reader { // text that should be read by a screen reader but not rendered on screen
                 display: inline-block;
                 position: absolute;
                 font-size: 0;
                 line-height: 0;
                 height: 1px;
                 overflow: hidden;
}
*/

ul.vbar {
  list-style: none;
  padding: 0;

  li {
    display: inline-block;
    padding: 0 0.5em;
    border-right: 1px solid @text-color;
  }
  li:first-of-type {
    padding-left: 0;
  }
  li:last-of-type {
    border-right: none;
  }
}

.well {
  box-shadow: 0 0 8px #d5d0c0;
  border: medium none;
  border-radius: 0;
  padding: 20px;
  margin-bottom: 3em;
  background: white;
  h2 {
    padding: 10px 0 4px;
    font-size: 1.2em;
    //text-transform: uppercase;
    border-bottom: none;
    color: @su-red-text;
  }
  h3 {
    font-size: 1em;
    //text-transform: uppercase;
    font-weight: 700;
  }

  ul {
    list-style-type: square;
    list-style-image: url('../images/bullet.gif');

    li {
      position: relative;
      margin-bottom: 7px;
      line-height: 1.1em;
    }
  }

  img {
    .img-responsive;
    background-color: rgba(0, 0, 0, 0);
    margin-bottom: 6px;
    padding: 2px;
  }
  &.well-calendar-list {
    h3 {
      display: inline-block;
      padding-right: 4px;
    }
    ul {
      display: inline-block;
      padding: 0;
      list-style-type: none;
      li {
        display: inline-block;
        padding-right: 3px;
      }
    }

  }
}

.info-box,
.well {
  .fa {
    color: #DAD7CB;
    margin: 0;
  }
}

.embed-container {
  position: relative;
  padding-bottom: 56.25%; /* 16:9 */
  padding-top: 25px;
  height: 0;
  iframe{
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
  }
}

// Media Captions
.media-attrib,
.media-caption {
  font-family: @font-family-sans-serif;
  font-size: @font-size-small;
}
.media-attrib {
  font-style:italic;
  text-align:right;
  p& {
    margin-bottom: .25em;
  }
}

.media-caption {
  margin-top: .5em;
  line-height: 1.3em;

  p& {
    margin-bottom: 0;

    #story-banner & {
      margin-bottom: 1em; // Except when part of the story banner
    }
    .pull-right.pull-right-wide & {
      @media (max-width: @screen-xs-max) {
        margin-bottom: 1em; // Except when being pulled on mobile
      }
    }


  }

  .mugshot & {
      .responsive-type(base); // responsive paragraph from _less.less mixin
      text-align: center;
      margin-top: .6em;
  }

  .media-attrib {
    font-size: inherit;
    .mugshot & {
      display: block;
      text-align: center;
      font-size: 14px; // fallback for ie8 and older iOS safari
      font-size: 1.4rem; // 10px HTML base * 1.4 = 14px;
    }
  }
}

// sidebar styles - these apply to the newspage sidebar as well as in-set side bars for bio/related/sidebar story elements on story-level pages

.sidebar-margin {
  margin-left: 2em;
  margin-right: 2em;
}

.sidebar-section {
  h2 {
    color: @su-red;
    font-family: @font-family-serif;
    .font-size-em(24; 18);
    //background: @su-beige-20;
    padding: 5px;
    margin-left: -5px;
    margin-bottom: .5em;
    border-bottom: 1px solid @su-beige-40;
  }

  p {
    color: @su-black;
    .font-size-em(16);
    line-height: 1.2em;
    margin-top: .1em;
    margin-bottom: 1.4em;
  }
  p.side-byline {
    color: @su-red;
    font-size: .8em;
    font-weight: 600;
    text-transform: uppercase;
    margin-bottom: 0;
  }
  li {

  }
  .sidebar-icon {
    font-size: 12px;
  }
}

.page-section {
  margin-left: none;
}

.descriptor {
  font-size: 0.9em;
  font-weight: 600;
  letter-spacing: 0.04em;
  line-height: 1.5;
  margin-bottom: 4px;
  color: @su-clay;
}

/////////////////////////////////
// Page Regions

#top {
  min-height: 10px;
  padding: 4px 0 0;
  background-color: @su-red;
  color: @su-red;
}

#content {
  margin-top: 3em;
  margin-bottom: 3em; //20px
}

aside {
  a {
    color: @text-color;
    text-decoration: none;
  }
  hr {
    margin: 0;
  }
}

/*** Sidebar infobox styles ***/
.infobox {
  background-color: white;
  background-position: right bottom;
  background-repeat: no-repeat;
  min-height:180px;
}

/////////////////////////////////
// Cards
@import "_component-cards.less";

/////////////////////////////////
// Header, Footer
@import "_header.less";
@import "_footer.less";

/////////////////////////////////
// classes whose visibility we can test in JS to determine screen size
// classes will be made visible in the appropriate breakpoints in base-responsive.less
.size-detect-xs,
.size-detect-sm,
.size-detect-md,
.size-detect-lg {
  display: none;
}

/////////////////////////////////
// media queries
@import "_base-responsive.less";

